Fazendo indentação básica para melhor compreensão

--- a/redacao.html
+++ b/redacao.html
@@ -1,41 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="teste.js">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto - Decola ENEM</title>
-    <link rel="stylesheet" href="./styles/styles.css">
-    <div>
+  </head>
+  <body>
+    <header class="cabecalho">
+      <div>
         <nav classe="login-cadastro">
-            <a class="link-login" href="login.html">Login </a>
-            <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
+          <a class="link-login" href="login.html">Login </a>
+          <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
         </nav>
-    </div>
-    <a class="cabecalho__menu__link" href="home.html"> <img class="logo-apresentacao" src="img/logo_docola_enem.png" href="home.html"> </a>
-</head>
-    <body>
-    </div>
-        <header class="cabecalho"> 
-                <nav cabecalho__menu>
-                        <a class="cabecalho__menu__link" href="sobre_nos.html">Sobre Nós </a>
-                        <a class="cabecalho__menu__link" href="redacao.html"> Redação </a>
-                        <a class="cabecalho__menu__link" href="linguagens.html"> Linguagens </a>
-                        <a class="cabecalho__menu__link" href="ciencias_natureza.html"> Ciências da Natureza </a>
-                        <a class="cabecalho__menu__link" href="ciencias_humanas.html"> Ciências Humanas </a>
-                        <a class="cabecalho__menu__link" href="matematica.html"> Matemática </a>
-                </nav> 
-        </header>
+      </div>
+      <a class="cabecalho__menu__link" href="home.html">
+        <img
+          class="logo-apresentacao"
+          src="img/logo_docola_enem.png"
+          href="home.html"
+          height="300px"
+        />
+      </a>
+      <nav cabecalho__menu>
+        <a class="cabecalho__menu__link" href="sobre_nos.html">Sobre Nós </a>
+        <a class="cabecalho__menu__link" href="redacao.html"> Redação </a>
+        <a class="cabecalho__menu__link" href="linguagens.html"> Linguagens </a>
+        <a class="cabecalho__menu__link" href="ciencias_natureza.html">
+          Ciências da Natureza
+        </a>
+        <a class="cabecalho__menu__link" href="ciencias_humanas.html">
+          Ciências Humanas
+        </a>
+        <a class="cabecalho__menu__link" href="matematica.html"> Matemática </a>
+      </nav>
+    </header>
 
-        <main> 
-            <section>
-                <h1 class="apresentacao__conteudo__titulo">Redação</h1>
-            </section>
-        </main>
-                <footer class="rodape__pagina">
-                    <p> Desenvolvido pela equipe projeto integrador Proz - 2024 ©   </p>
-                </footer>
-    </body>
+    <main>
+      <section>
+        <h1 class="apresentacao__conteudo__titulo">Redação</h1>
+      </section>
+    </main>
+    <footer class="rodape__pagina">
+      <p>Desenvolvido pela equipe projeto integrador Proz - 2024 ©</p>
+    </footer>
+  </body>
 </html>
