--- a/cadastre-se.html
+++ b/cadastre-se.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="teste.js">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto - Decola ENEM</title>
-    <link rel="stylesheet" href="./styles/styles.css">
-    <a class="cabecalho__menu__link" href="home.html"> <img class="logo-apresentacao" src="img/logo_docola_enem.png" href="home.html"> </a>
-</head>
-    <body>
-
-        <main> 
-            <section>
-                <h1 class="apresentacao__conteudo__titulo">Cadastre-se</h1>
-            </section>
-        </main>
-                
-                <footer class="rodape__pagina">
-                    <p> Desenvolvido pela equipe projeto integrador Proz - 2024 ©  </p>
-                </footer>
-    </body>
+  </head>
+  <body>
+    <header>
+      <a class="cabecalho__menu__link" href="home.html">
+        <img
+          class="logo-apresentacao"
+          src="img/logo_docola_enem.png"
+          href="home.html"
+        />
+      </a>
+    </header>
+    <main>
+      <section>
+        <h1 class="apresentacao__conteudo__titulo">Cadastre-se</h1>
+      </section>
+    </main>
+    <footer class="rodape__pagina">
+      <p>Desenvolvido pela equipe projeto integrador Proz - 2024 ©</p>
+    </footer>
+  </body>
 </html>
