Finalizando HTML da página Ciências Humanas

--- a/ciencias_humanas.html
+++ b/ciencias_humanas.html
@@ -4,45 +4,54 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projeto - Decola ENEM</title>
+    <title>Ciências Humanas</title>
   </head>
   <body>
-    <header class="cabecalho">
-      <div>
-        <nav classe="login-cadastro">
-          <a class="link-login" href="login.html">Login </a>
-          <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
-        </nav>
-      </div>
-      <a class="cabecalho__menu__link" href="home.html">
-        <img
-          class="logo-apresentacao"
-          src="img/logo_docola_enem.png"
-          href="home.html"
-          height="300px"
-        />
-      </a>
-      <nav cabecalho__menu>
-        <a class="cabecalho__menu__link" href="sobre_nos.html">Sobre Nós </a>
-        <a class="cabecalho__menu__link" href="redacao.html"> Redação </a>
-        <a class="cabecalho__menu__link" href="linguagens.html"> Linguagens </a>
-        <a class="cabecalho__menu__link" href="ciencias_natureza.html">
-          Ciências da Natureza
-        </a>
-        <a class="cabecalho__menu__link" href="ciencias_humanas.html">
-          Ciências Humanas
-        </a>
-        <a class="cabecalho__menu__link" href="matematica.html"> Matemática </a>
+    <header>
+      <nav>
+        <a href="#"
+          ><img src="img/icone_cie_humanas.png" alt="logo" height="100px"
+        /></a>
+        <br />
+        <a href="">Sobre nós</a>
+        <a href="">Redação</a>
+        <a href="">Linguagens</a>
+        <a href="">Ciências da Natureza</a>
+        <a href="">Ciências Humanas</a>
+        <a href="">Matemática de suas tecnologias</a>
       </nav>
     </header>
-
+    <hr />
     <main>
-      <section>
-        <h1 class="apresentacao__conteudo__titulo">Ciências Humanas</h1>
-      </section>
+      <h1>Ciências humanas: História, Geografia, Filosofia, e Sociologia</h1>
+      <p>
+        São ciências mais interpretativas e menos exatas, ou seja, não existe
+        fórmula. O que se faz geralmente é, a partir de métodos científicos,
+        observar as características humanas e determinar padrões. Alguns
+        exemplos de disciplinas humanas são Sociologia, História e Geografia.
+      </p>
+      <h2>Matérias que você deve estudar para o ENEM</h2>
+      <a href="#"
+        ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
+      /></a>
+      <a href="#"
+        ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
+      /></a>
+      <a href="#"
+        ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
+      /></a>
+      <a href="#"
+        ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
+      /></a>
+      <br />
+      <br />
+      <a href="#"
+        ><img src="./img/pre-hist.png" alt="pre-hist" height="200"
+      /></a>
     </main>
-    <footer class="rodape__pagina">
-      <p>Desenvolvido pela equipe projeto integrador Proz - 2024 ©</p>
+    <hr />
+    <footer>
+      <p>Desenvolvido pela equipe projeto integrador Proz</p>
     </footer>
   </body>
 </html>
