--- a/ciencias_natureza.html
+++ b/ciencias_natureza.html
@@ -38,7 +38,7 @@
 
     <main>
       <section>
-        <h1 class="apresentacao__conteudo__titulo">Ciências da Natureza</h1>
+        <h1 class="apresentacao__conteudo__titulo">Ciências Humanas</h1>
       </section>
     </main>
     <footer class="rodape__pagina">
