Finalizando HTML da página Ciências da Natureza

--- a/ciencias_humanas.html
+++ b/ciencias_humanas.html
@@ -23,31 +23,37 @@
     </header>
     <hr />
     <main>
-      <h1>Ciências humanas: História, Geografia, Filosofia, e Sociologia</h1>
-      <p>
-        São ciências mais interpretativas e menos exatas, ou seja, não existe
-        fórmula. O que se faz geralmente é, a partir de métodos científicos,
-        observar as características humanas e determinar padrões. Alguns
-        exemplos de disciplinas humanas são Sociologia, História e Geografia.
-      </p>
-      <h2>Matérias que você deve estudar para o ENEM</h2>
-      <a href="#"
-        ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
-      /></a>
-      <a href="#"
-        ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
-      /></a>
-      <a href="#"
-        ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
-      /></a>
-      <a href="#"
-        ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
-      /></a>
-      <br />
-      <br />
-      <a href="#"
-        ><img src="./img/pre-hist.png" alt="pre-hist" height="200"
-      /></a>
+      <section>
+        <h1>Ciências humanas: História, Geografia, Filosofia, e Sociologia</h1>
+        <p>
+          São ciências mais interpretativas e menos exatas, ou seja, não existe
+          fórmula. O que se faz geralmente é, a partir de métodos científicos,
+          observar as características humanas e determinar padrões. Alguns
+          exemplos de disciplinas humanas são Sociologia, História e Geografia.
+        </p>
+      </section>
+      <section>
+        <div align="center">
+          <h2>Matérias que você deve estudar para o ENEM</h2>
+          <a href="#"
+            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
+          /></a>
+          <a href="#"
+            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
+          /></a>
+          <a href="#"
+            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
+          /></a>
+          <a href="#"
+            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
+          /></a>
+          <br />
+          <br />
+          <a href="#"
+            ><img src="./img/pre-hist.png" alt="pre-hist" height="200"
+          /></a>
+        </div>
+      </section>
     </main>
     <hr />
     <footer>
