--- a/ciencias_natureza.html
+++ b/ciencias_natureza.html
@@ -4,45 +4,75 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projeto - Decola ENEM</title>
+    <title>Ciências da Natureza</title>
   </head>
   <body>
-    <header class="cabecalho">
-      <div>
-        <nav classe="login-cadastro">
-          <a class="link-login" href="login.html">Login </a>
-          <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
-        </nav>
-      </div>
-      <a class="cabecalho__menu__link" href="home.html">
-        <img
-          class="logo-apresentacao"
-          src="img/logo_docola_enem.png"
-          href="home.html"
-          height="300px"
-        />
-      </a>
-      <nav cabecalho__menu>
-        <a class="cabecalho__menu__link" href="sobre_nos.html">Sobre Nós </a>
-        <a class="cabecalho__menu__link" href="redacao.html"> Redação </a>
-        <a class="cabecalho__menu__link" href="linguagens.html"> Linguagens </a>
-        <a class="cabecalho__menu__link" href="ciencias_natureza.html">
-          Ciências da Natureza
-        </a>
-        <a class="cabecalho__menu__link" href="ciencias_humanas.html">
-          Ciências Humanas
-        </a>
-        <a class="cabecalho__menu__link" href="matematica.html"> Matemática </a>
+    <header>
+      <nav>
+        <a href="#"
+          ><img src="img/icone_cie_humanas.png" alt="logo" height="100px"
+        /></a>
+        <br />
+        <a href="">Sobre nós</a>
+        <a href="">Redação</a>
+        <a href="">Linguagens</a>
+        <a href="">Ciências da Natureza</a>
+        <a href="">Ciências Humanas</a>
+        <a href="">Matemática de suas tecnologias</a>
       </nav>
     </header>
-
+    <hr />
     <main>
       <section>
-        <h1 class="apresentacao__conteudo__titulo">Ciências Humanas</h1>
+        <h1>Ciências da Natureza: Biologia, Química e Física</h1>
+        <p>
+          O objetivo da prova de Ciências da Natureza não é obrigar você a
+          memorizar fórmulas. Na verdade, as questões querem saber se você
+          consegue usar os conhecimentos dessas matérias em diferentes
+          contextos.
+        </p>
+        <div align="right">
+          <img
+            src="./img/menino-braco-cruzado.png"
+            alt="menino-braco-cruzado"
+            height="300"
+          />
+        </div>
+        <h2>Áreas Ciências da Natureza?</h2>
+        <p>
+          Ciências da Natureza é o campo da ciência que se dedica ao estudo da
+          natureza e os elementos que a compõe. Também conhecida como ciências
+          naturais, essa área do conhecimento é dividida em outros campos do
+          saber que utilizam variados métodos científicos para estudar a
+          natureza em seus diversos aspectos.
+        </p>
+      </section>
+      <section>
+        <div align="center">
+          <img
+            src="./img/thumb-video-natureza.png"
+            alt="thumb-video-natureza"
+            height="200px"
+          />
+          <p>Resumão de ciências da Natureza</p>
+        </div>
+        <div align="center">
+          <h2>Matérias que você deve estudar para o ENEM</h2>
+          <a href="#"
+            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
+          /></a>
+          <a href="#"
+            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
+          /></a>
+          <a href="#"
+            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
+          /></a>
+        </div>
       </section>
     </main>
-    <footer class="rodape__pagina">
-      <p>Desenvolvido pela equipe projeto integrador Proz - 2024 ©</p>
+    <hr />
+    <footer>
+      <p>Desenvolvido pela equipe projeto integrador Proz</p>
     </footer>
   </body>
 </html>
