Adicionando textos a página de matemática

--- a/matematica.html
+++ b/matematica.html
@@ -38,7 +38,9 @@
 
     <main>
       <section>
-        <h1 class="apresentacao__conteudo__titulo">Matemática</h1>
+        <h1 class="apresentacao__conteudo__titulo">Matemática e suas tecnologias</h1>
+        <p>Números, equações, fórmulas…quase sempre, o estudo da matemática desperta dúvidas e é temido por alguns alunos, principalmente a partir do ensino fundamental. Mas nem sempre precisa ser desta forma.
+          Assim como a língua portuguesa, necessária para a nossa comunicação, a matemática também está presente em nossa vida prática e algumas mudanças podem ajudar nos estudos da disciplina e tornar o aprendizado mais diverti</p>
       </section>
     </main>
     <footer class="rodape__pagina">
