--- a/Redação.html
+++ b/Redação.html
@@ -28,14 +28,29 @@
                         <a class="cabecalho__menu__link" href="matematica.html"> Matemática </a>
                 </nav> 
         </header>
-
+        <h1 class="apresentacao__conteudo__titulo">Redação</h1>
         <main> 
             <section>
-                <h1 class="apresentacao__conteudo__titulo">Redação</h1>
+                <p>A redação no Enem é no estilo dissertativa-argumentativa, onde você deve propor uma solução ao problema apresentado, com base em seu repertório de conhecimentos, sem desrespeitar os direitos humanos e a legislação em geral. O texto deve seguir a norma culta padrão da Língua Portuguesa, obedecendo às regras de gramática.
+                Há a Folha de Rascunho, onde você pode escrever uma prévia do seu texto, e a Folha de Redação, onde estará o seu texto final.</p>
+            </section>
+            
+            <section>
+                <h2>Elementos da Redação</h2>
+                <p>A síntese do MEC sobre a Redação do Enem envolve quatro focos para o seu texto: <br>
+                1 – Atenção ao Tema que estiver proposto no Enunciado; <br>
+                2 – Criar uma Tese a respeito da problemática apresentada; <br>
+                3 – Apresentar Argumentos em defesa da Tese que você criar; <br>
+                4 – Concluir com uma Proposta de Intervenção Social, considerando a perspectiva dos Direitos Humanos. </p>
+            </section>
+            
+            <section>
+                <p>Modelo de redações nota 1000 do Enem para você se inspirar</p>
+                <span>Acrescentar um Button "Clique Aqui"</span>
             </section>
         </main>
-                <footer class="rodape__pagina">
-                    <p> Desenvolvido pela equipe projeto integrador Proz - 2024 ©   </p>
-                </footer>
+            <footer class="rodape__pagina">
+                <p> Desenvolvido pela equipe projeto integrador Proz - 2024 ©  </p>
+            </footer>
     </body>
 </html>
