--- a/Redação.html
+++ b/Redação.html
@@ -9,12 +9,12 @@
     <title>Projeto - Decola ENEM</title>
     <link rel="stylesheet" href="./styles/styles.css">
     <div>
-        <nav classe="login-cadastro">
+        <nav class="login-cadastro">
             <a class="link-login" href="login.html">Login </a>
             <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
         </nav>
     </div>
-    <a class="cabecalho__menu__link" href="home.html"> <img class="logo-apresentacao" src="img/logo_docola_enem.png" href="home.html"> </a>
+    <a class="cabecalho__menu__link" href="home.html"> <img class="logo-apresentacao" src="/assets/images/logo_docola_enem.png" href="home.html" width="150" height="125"> </a>
 </head>
     <body>
     </div>
@@ -29,14 +29,17 @@
                 </nav> 
         </header>
         <h1 class="apresentacao__conteudo__titulo">Redação</h1>
+        <img src="/assets/images/ilustra-redacao-enem-1608064622576_v2_4x3.jpg" width="223" height="221" alt="ilustra-redacao-enem">
         <main> 
             <section>
                 <p>A redação no Enem é no estilo dissertativa-argumentativa, onde você deve propor uma solução ao problema apresentado, com base em seu repertório de conhecimentos, sem desrespeitar os direitos humanos e a legislação em geral. O texto deve seguir a norma culta padrão da Língua Portuguesa, obedecendo às regras de gramática.
                 Há a Folha de Rascunho, onde você pode escrever uma prévia do seu texto, e a Folha de Redação, onde estará o seu texto final.</p>
             </section>
-            
+            <img src="/assets/images/youtube-card.png" alt="youtube-card" width="100" height="100">
+            <img src="/assets/images/youtube-card.png" alt="youtube-card" width="100" height="100">
+            <img src="/assets/images/youtube-card.png" alt="youtube-card" width="100" height="100">
             <section>
-                <h2>Elementos da Redação</h2>
+                <h2>Elementos da Redação</h2> <img src="/assets/images/Estrutura-da-redacao.webp" alt="Estrutura-da-redacao" width="223" height="221">
                 <p>A síntese do MEC sobre a Redação do Enem envolve quatro focos para o seu texto: <br>
                 1 – Atenção ao Tema que estiver proposto no Enunciado; <br>
                 2 – Criar uma Tese a respeito da problemática apresentada; <br>
@@ -47,8 +50,8 @@
             <section>
                 <p>Modelo de redações nota 1000 do Enem para você se inspirar</p>
                 <span>Acrescentar um Button "Clique Aqui"</span>
-            </section>
-        </main>
+            </section>            
+        </main> <hr>
             <footer class="rodape__pagina">
                 <p> Desenvolvido pela equipe projeto integrador Proz - 2024 ©  </p>
             </footer>
