--- a/Teste_login.html
+++ b/Teste_login.html
@@ -10,7 +10,7 @@
     <h1>Login</h1>
     <form action="#" method="get">
         <fieldset>
-            <legend><img src="/img/logo_docola_enem.png" alt="logo_decola_enem"></legend>
+            <legend><img src="/assets/images/logo_docola_enem.png" alt="logo_decola_enem" width="100" height="100"></legend>
 
             <label for="User">Usuário</label>
             <input type="text" id="User" placeholder="Digite seu usuário">
