Adicionando textos a página de matemática

--- a/matematica.html
+++ b/matematica.html
@@ -38,10 +38,29 @@
 
     <main>
       <section>
-        <h1 class="apresentacao__conteudo__titulo">Matemática e suas tecnologias</h1>
-        <p>Números, equações, fórmulas…quase sempre, o estudo da matemática desperta dúvidas e é temido por alguns alunos, principalmente a partir do ensino fundamental. Mas nem sempre precisa ser desta forma.
-          Assim como a língua portuguesa, necessária para a nossa comunicação, a matemática também está presente em nossa vida prática e algumas mudanças podem ajudar nos estudos da disciplina e tornar o aprendizado mais diverti</p>
-      </section>
+        <h1 class="apresentacao__conteudo__titulo"><b>Matemática e suas tecnologias</b></h1>
+        <p aling=right> Números, equações, fórmulas…quase sempre, o estudo da matemática desperta dúvidas e é temido por alguns alunos, principalmente a partir do ensino fundamental. Mas nem sempre precisa ser desta forma.
+          Assim como a língua portuguesa, necessária para a nossa comunicação, a matemática também está presente em nossa vida prática e algumas mudanças podem ajudar nos estudos da disciplina e tornar o aprendizado mais diverti. </p>
+          <div>
+          <img src="img/Quem-inventou-a-Matematica.png" width="300" height="300" alt="left" aling="right">
+          </div>
+          <p>Em geral, nas provas de Matemática e Suas Tecnologias 
+            caem os seguintes temas:</p>
+            <p>-Sistema numérico (números naturais, inteiros, irracionais, frações);</p>
+            <p>-Lógica, medidas (comprimento, volume, metro, litro, quilômetro, escala);</p>
+            <p>-Regra de três;</p>
+            <p>-Razão e proporção;</p>
+            <p>-Porcentagem;</p>
+            <p>-Juros simples e compostos;</p>
+            <p>-Funçoes</p>
+            <p>-Aritmética; </p>
+            <p>-Estatística;</p>
+            <p>-Geometria plana e espacial;</p>
+            <p>-Leitura e interpretação de gráficos e tabelas;</p>
+            <p>-Probabilidade;</p>
+            <p> <span style="color:rgb(255, 94, 0)">MEDO DA MATÉMATICA NUNCA MAIS!</span> </p>
+            <P>Veja abaixo materias que voce deve estudar para o ENEM:</P>
+        </section>
     </main>
     <footer class="rodape__pagina">
       <p>Desenvolvido pela equipe projeto integrador Proz - 2024 ©</p>
