atualizar profissão na página sobre nós

--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -53,7 +53,7 @@
                                             <li>
                                                 <img class="foto-integrante__equipe" src="img/perfil-02.png" alt="foto-carolina">
                                                 <h4 class="equipe__lista">Carolina<br>Lima</h4>
-                                                <p>Desenvolvedora Front-end</p>
+                                                <p>Desenvolvedora<br>Front-end</p>
                                                     <div class="apresentacao__rede-social">
                                                         <a class="apresentacao__links-rede-social__link" href="https://github.com/CarolinaLR">
                                                             <img class="logo-rede-social" src="img/github.png">
@@ -66,7 +66,7 @@
                                             <li>
                                                 <img class="foto-integrante__equipe" src="img/perfil-01.png" alt="foto-diego">
                                                 <h4 class="equipe__lista">Diego<br>Magno</h4>
-                                                <p>Desenvolvedor Front-end</p>
+                                                <p>Desenvolvedor<br>Front-end</p>
                                                     <div class="apresentacao__rede-social">
                                                         <a class="apresentacao__links-rede-social__link" href="https://github.com/dygomagno">
                                                             <img class="logo-rede-social" src="img/github.png">
@@ -79,7 +79,7 @@
                                             <li>
                                                 <img class="foto-integrante__equipe" src="img/perfil-02.png" alt="foto-karen">
                                                 <h4 class="equipe__lista">Karen<br>Bastos</h4>
-                                                <p>Desenvolvedora Front-end</p>
+                                                <p>Desenvolvedora<br>Front-end</p>
                                                     <div class="apresentacao__rede-social">
                                                         <a class="apresentacao__links-rede-social__link" href="https://github.com/karenkaroline-bastos">
                                                             <img class="logo-rede-social" src="img/github.png">
@@ -92,7 +92,7 @@
                                             <li>
                                                 <img class="foto-integrante__equipe" src="img/perfil-01.png" alt="foto-mauri">
                                                 <h4 class="equipe__lista">Maurício<br>Junio</h4>
-                                                <p>Desenvolvedor Front-end</p>
+                                                <p>Desenvolvedor<br>Front-end</p>
                                                     <div class="apresentacao__rede-social">
                                                         <a class="apresentacao__links-rede-social__link" href="https://github.com/maurijr97">
                                                             <img class="logo-rede-social" src="img/github.png">
@@ -105,7 +105,7 @@
                                             <li>
                                                 <img class="foto-integrante__equipe" src="img/perfil-01.png" alt="foto-nata">
                                                 <h4 class="equipe__lista">Natã<br>Sousa</h4>
-                                                <p>Desenvolvedor Front-end</p>
+                                                <p>Desenvolvedor<br>Front-end</p>
                                                     <div class="apresentacao__rede-social">
                                                         <a class="apresentacao__links-rede-social__link" href="https://github.com/NatanSousa22">
                                                             <img class="logo-rede-social" src="img/github.png">
