Adicionando textos a página de matemática

--- a/matematica.html
+++ b/matematica.html
@@ -58,9 +58,14 @@
             <p>-Geometria plana e espacial;</p>
             <p>-Leitura e interpretação de gráficos e tabelas;</p>
             <p>-Probabilidade;</p>
-            <p> <span style="color:rgb(255, 94, 0)">MEDO DA MATÉMATICA NUNCA MAIS!</span> </p>
+            <p> <span style="color:rgb(255, 94, 0)">Medo da matemática?Nunca mais, vem com a gente!</span> </p>
             <P>Veja abaixo materias que voce deve estudar para o ENEM:</P>
-        </section>
+
+            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
+            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
+            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
+       
+          </section>
     </main>
     <footer class="rodape__pagina">
       <p>Desenvolvido pela equipe projeto integrador Proz - 2024 ©</p>
