--- a/linguagens.html
+++ b/linguagens.html
@@ -38,7 +38,26 @@
 
     <main>
       <section>
-        <h1 class="apresentacao__conteudo__titulo">Linguagens</h1>
+        <h1 class="apresentacao__conteudo__titulo"><b>Linguagens, Códigos e suas Tecnologias:</b></h1>
+        <p> <span style="color:rgb(255, 94, 0)"><b>Português, Literatura, Língua Estrangeira, Artes, Educação Física e Tecnologias da Informação e Comunicação</b></span> </p>
+
+       <div align="center">
+        <p>Linguagens, Códigos e suas Tecnologias é uma prova do Enem que testa conhecimentos 
+          relacionados aos conteúdos de língua portuguesa, literatura,língua estrangeira, artes, educação física e tecnologias da informação e comunicação.</p>
+        </div>
+        <img src="img/img_estudantes.png" width="300" height="300" alt="left" aling="right">
+
+        <div align="center">
+          <p>Matérias que você deve estudar para o Enem.</p>
+          
+          <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
+            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
+            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
+            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
+            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
+            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
+        </div>
+       </div>
       </section>
     </main>
     <footer class="rodape__pagina">
