Arquivo login.html e redacao.html atualizados na branch main

--- a/redacao.html
+++ b/redacao.html
@@ -14,7 +14,7 @@
             <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
         </nav>
     </div>
-    <a class="cabecalho__menu__link" href="home.html"> <img class="logo-apresentacao" src="/assets/images/logo_docola_enem.png" href="home.html" width="150" height="125"> </a>
+    <a class="cabecalho__menu__link" href="home.html"> <img class="logo-apresentacao" src="/img/logo_docola_enem.png" href="home.html" width="150" height="125"> </a>
 </head>
     <body>
     </div>
@@ -29,17 +29,17 @@
                 </nav> 
         </header>
         <h1 class="apresentacao__conteudo__titulo">Redação</h1>
-        <img src="/assets/images/ilustra-redacao-enem-1608064622576_v2_4x3.jpg" width="223" height="221" alt="ilustra-redacao-enem">
+        <img src="/img/ilustra-redacao-enem-1608064622576_v2_4x3.jpg" width="223" height="221" alt="ilustra-redacao-enem">
         <main> 
             <section>
                 <p>A redação no Enem é no estilo dissertativa-argumentativa, onde você deve propor uma solução ao problema apresentado, com base em seu repertório de conhecimentos, sem desrespeitar os direitos humanos e a legislação em geral. O texto deve seguir a norma culta padrão da Língua Portuguesa, obedecendo às regras de gramática.
                 Há a Folha de Rascunho, onde você pode escrever uma prévia do seu texto, e a Folha de Redação, onde estará o seu texto final.</p>
             </section>
-            <img src="/assets/images/youtube-card.png" alt="youtube-card" width="100" height="100">
-            <img src="/assets/images/youtube-card.png" alt="youtube-card" width="100" height="100">
-            <img src="/assets/images/youtube-card.png" alt="youtube-card" width="100" height="100">
+            <img src="/img/youtube-card.png" alt="youtube-card" width="100" height="100">
+            <img src="/img/youtube-card.png" alt="youtube-card" width="100" height="100">
+            <img src="/img/youtube-card.png" alt="youtube-card" width="100" height="100">
             <section>
-                <h2>Elementos da Redação</h2> <img src="/assets/images/Estrutura-da-redacao.webp" alt="Estrutura-da-redacao" width="223" height="221">
+                <h2>Elementos da Redação</h2> <img src="/img/Estrutura-da-redacao.webp" alt="Estrutura-da-redacao" width="223" height="221">
                 <p>A síntese do MEC sobre a Redação do Enem envolve quatro focos para o seu texto: <br>
                 1 – Atenção ao Tema que estiver proposto no Enunciado; <br>
                 2 – Criar uma Tese a respeito da problemática apresentada; <br>
