--- a/login.html
+++ b/login.html
@@ -1,47 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="teste.js" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projeto - Decola ENEM</title>
-    <link rel="stylesheet" href="./styles/styles.css" />
-  </head>
-  <body>
-    <main>
-      <section>
-        <a class="cabecalho__menu__link" href="home.html">
-          <img
-            class="logo-apresentacao"
-            src="img/logo_docola_enem.png"
-            href="home.html"
-          />
-        </a>
-        <h1 class="apresentacao__conteudo__titulo">Login</h1>
-      </section>
-
-      <form action="#" method="get">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="Stylesheet" href="Style.css">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Login</h1>
+    <form action="#" method="get">
         <fieldset>
-          <label for="User">Usuário</label>
-          <input type="text" id="User" placeholder="Digite seu usuário" />
+            <legend><img src="/img/logo_docola_enem.png" alt="logo_decola_enem" width="100" height="100"></legend>
 
-          <label for="Pass">Senha</label>
-          <input
-            type="password"
-            id="Pass"
-            placeholder="Digite sua senha"
-            required
-          />
+            <label for="User">Usuário</label>
+            <input type="text" id="User" placeholder="Digite seu usuário">
 
-          <input type="submit" value="Entrar" />
+            <label for="Pass">Senha</label>
+            <input type="password" id="Pass" placeholder="Digite sua senha" required>
+
+
+
+            <input type="submit" value="Entrar">
+
         </fieldset>
-      </form>
-    </main>
-
-    <footer class="rodape__pagina">
-      <p>Desenvolvido pela equipe projeto integrador - Proz - 2024 ©</p>
-    </footer>
-  </body>
+    </form>
+</body>
 </html>
