--- a/ciencias_natureza.html
+++ b/ciencias_natureza.html
@@ -7,20 +7,26 @@
     <title>Ciências da Natureza</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="#"
-          ><img src="img/icone_cie_humanas.png" alt="logo" height="100px"
-        /></a>
-        <br />
-        <a href="">Sobre nós</a>
-        <a href="">Redação</a>
-        <a href="">Linguagens</a>
-        <a href="">Ciências da Natureza</a>
-        <a href="">Ciências Humanas</a>
-        <a href="">Matemática de suas tecnologias</a>
+    <div>
+      <nav classe="login-cadastro">
+          <a class="link-login" href="login.html">Login </a>
+          <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
       </nav>
-    </header>
+  </div>
+  <a class="cabecalho__menu__link" href="home.html"> <img class="logo-apresentacao" src="img/logo_docola_enem.png" href="home.html"> </a>
+</head>
+  <body>
+  </div>
+      <header class="cabecalho"> 
+              <nav cabecalho__menu>
+                      <a class="cabecalho__menu__link" href="sobre_nos.html">Sobre Nós </a>
+                      <a class="cabecalho__menu__link" href="redacao.html"> Redação </a>
+                      <a class="cabecalho__menu__link" href="linguagens.html"> Linguagens </a>
+                      <a class="cabecalho__menu__link" href="ciencias_natureza.html"> Ciências da Natureza </a>
+                      <a class="cabecalho__menu__link" href="ciencias_humanas.html"> Ciências Humanas </a>
+                      <a class="cabecalho__menu__link" href="matematica.html"> Matemática </a>
+              </nav> 
+      </header>
     <hr />
     <main>
       <section>
