--- a/cadastre-se.html
+++ b/cadastre-se.html
@@ -7,15 +7,26 @@
     <title>Projeto - Decola ENEM</title>
   </head>
   <body>
-    <header>
-      <a class="cabecalho__menu__link" href="home.html">
-        <img
-          class="logo-apresentacao"
-          src="img/logo_docola_enem.png"
-          href="home.html"
-        />
-      </a>
-    </header>
+    <div>
+      <nav classe="login-cadastro">
+          <a class="link-login" href="login.html">Login </a>
+          <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
+      </nav>
+  </div>
+  <a class="cabecalho__menu__link" href="home.html"> <img class="logo-apresentacao" src="img/logo_docola_enem.png" href="home.html"> </a>
+</head>
+  <body>
+  </div>
+      <header class="cabecalho"> 
+              <nav cabecalho__menu>
+                      <a class="cabecalho__menu__link" href="sobre_nos.html">Sobre Nós </a>
+                      <a class="cabecalho__menu__link" href="redacao.html"> Redação </a>
+                      <a class="cabecalho__menu__link" href="linguagens.html"> Linguagens </a>
+                      <a class="cabecalho__menu__link" href="ciencias_natureza.html"> Ciências da Natureza </a>
+                      <a class="cabecalho__menu__link" href="ciencias_humanas.html"> Ciências Humanas </a>
+                      <a class="cabecalho__menu__link" href="matematica.html"> Matemática </a>
+              </nav> 
+      </header>
     <main>
       <section>
         <h1 class="apresentacao__conteudo__titulo">Cadastre-se</h1>
