página de linguagens

--- a/linguagens.html
+++ b/linguagens.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
@@ -14,7 +14,7 @@
           <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
         </nav>
       </div>
-      <a class="cabecalho__menu__link" href="home.html">
+      <a class="cabecalho_menu_link" href="home.html">
         <img
           class="logo-apresentacao"
           src="img/logo_docola_enem.png"
@@ -23,22 +23,41 @@
         />
       </a>
       <nav cabecalho__menu>
-        <a class="cabecalho__menu__link" href="sobre_nos.html">Sobre Nós </a>
-        <a class="cabecalho__menu__link" href="redacao.html"> Redação </a>
-        <a class="cabecalho__menu__link" href="linguagens.html"> Linguagens </a>
-        <a class="cabecalho__menu__link" href="ciencias_natureza.html">
+        <a class="cabecalho_menu_link" href="sobre_nos.html">Sobre Nós </a>
+        <a class="cabecalho_menu_link" href="redacao.html"> Redação </a>
+        <a class="cabecalho_menu_link" href="linguagens.html"> Linguagens </a>
+        <a class="cabecalho_menu_link" href="ciencias_natureza.html">
           Ciências da Natureza
         </a>
-        <a class="cabecalho__menu__link" href="ciencias_humanas.html">
+        <a class="cabecalho_menu_link" href="ciencias_humanas.html">
           Ciências Humanas
         </a>
-        <a class="cabecalho__menu__link" href="matematica.html"> Matemática </a>
+        <a class="cabecalho_menu_link" href="matematica.html"> Matemática </a>
       </nav>
     </header>
 
     <main>
       <section>
-        <h1 class="apresentacao__conteudo__titulo">Linguagens</h1>
+        <h1 class="apresentacao_conteudo_titulo"><b>Linguagens, Códigos e suas Tecnologias:</b></h1>
+        <p> <span style="color:rgb(255, 94, 0)"><b>Português, Literatura, Língua Estrangeira, Artes, Educação Física e Tecnologias da Informação e Comunicação</b></span> </p>
+
+       <div align="center">
+        <p>Linguagens, Códigos e suas Tecnologias é uma prova do Enem que testa conhecimentos 
+          relacionados aos conteúdos de língua portuguesa, literatura,língua estrangeira, artes, educação física e tecnologias da informação e comunicação.</p>
+        </div>
+        <img src="img/img_estudantes.png" width="300" height="300" alt="left" aling="right">
+
+        <div align="center">
+          <p>Matérias que você deve estudar para o Enem.</p>
+          
+          <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
+            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
+            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
+            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
+            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
+            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
+        </div>
+       </div>
       </section>
     </main>
     <footer class="rodape__pagina">
