página de linguagen- imagens

--- a/linguagens.html
+++ b/linguagens.html
@@ -50,12 +50,12 @@
         <div align="center">
           <p>Matérias que você deve estudar para o Enem.</p>
           
-          <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
-            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
-            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
-            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
-            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
-            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
+          <a href="#" ><img src="./img/youtube-card.png" alt="youtube-card" height="100"/></a>
+          <a href="#" ><img src="./img/youtube-card.png" alt="youtube-card" height="100"/></a>
+          <a href="#" ><img src="./img/youtube-card.png" alt="youtube-card" height="100"/></a>
+          <a href="#" ><img src="./img/youtube-card.png" alt="youtube-card" height="100"/></a>
+          <a href="#" ><img src="./img/youtube-card.png" alt="youtube-card" height="100"/></a>
+
         </div>
        </div>
       </section>
