--- a/cadastre-se.html
+++ b/cadastre-se.html
@@ -1,39 +1,103 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projeto - Decola ENEM</title>
-  </head>
-  <body>
-    <div>
-      <nav classe="login-cadastro">
-          <a class="link-login" href="login.html">Login </a>
-          <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
-      </nav>
-  </div>
-  <a class="cabecalho__menu__link" href="home.html"> <img class="logo-apresentacao" src="img/logo_docola_enem.png" href="home.html"> </a>
+<html lang="pt-BR">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formulário</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background-color: #0a1931;
+      /* Azul escuro */
+      color: white;
+    }
+
+    .container {
+      max-width: 500px;
+      margin: 50px auto;
+      padding: 20px;
+      background-color: #0f2556;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    }
+
+    h1 {
+      text-align: center;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 5px;
+    }
+
+    input[type="text"],
+    input[type="email"],
+    select {
+      width: 100%;
+      padding: 8px;
+      margin-bottom: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      box-sizing: border-box;
+    }
+
+    input[type="submit"] {
+      width: 100%;
+      padding: 10px;
+      background-color: #0c4387;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    input[type="submit"]:hover {
+      background-color: #1e4872;
+    }
+  </style>
 </head>
-  <body>
+
+<body>
+  <div class="container">
+    <h1>Formulário de Inscrição</h1>
+    <form>
+      <label for="nome">Nome Completo:</label>
+      <input type="text" id="nome" name="nome" required>
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="celular">Celular:</label>
+      <input type="tel" id="celular" name="celular" required>
+
+      <label for="data-nascimento">Data de Nascimento:</label>
+      <input type="date" id="data-nascimento" name="data-nascimento" required>
+
+      <label>Gênero:</label>
+      <label><input type="radio" name="genero" value="masculino" required> Masculino</label>
+      <label><input type="radio" name="genero" value="feminino" required> Feminino</label>
+
+      <label for="senha">Senha (máx. 8 dígitos):</label>
+      <input type="password" id="senha" name="senha" maxlength="8" required>
+
+
+      <label for="interesse">Interesse:</label>
+      <select id="interesse" name="interesse" required>
+        <option value="">Selecione uma opção</option>
+        <option value="redacao">Redação</option>
+        <option value="linguagens">Linguagens</option>
+        <option value="ciencias-natureza">Ciências da Natureza</option>
+        <option value="ciencias-humanas">Ciências Humanas</option>
+        <option value="matematica-e-suas-tecnologias">Matemática e suas tecnologias</option>
+
+      </select>
+
+      <input type="submit" value="Enviar">
+    </form>
   </div>
-      <header class="cabecalho"> 
-              <nav cabecalho__menu>
-                      <a class="cabecalho__menu__link" href="sobre_nos.html">Sobre Nós </a>
-                      <a class="cabecalho__menu__link" href="redacao.html"> Redação </a>
-                      <a class="cabecalho__menu__link" href="linguagens.html"> Linguagens </a>
-                      <a class="cabecalho__menu__link" href="ciencias_natureza.html"> Ciências da Natureza </a>
-                      <a class="cabecalho__menu__link" href="ciencias_humanas.html"> Ciências Humanas </a>
-                      <a class="cabecalho__menu__link" href="matematica.html"> Matemática </a>
-              </nav> 
-      </header>
-    <main>
-      <section>
-        <h1 class="apresentacao__conteudo__titulo">Cadastre-se</h1>
-      </section>
-    </main>
-    <footer class="rodape__pagina">
-      <p>Desenvolvido pela equipe projeto integrador Proz - 2024 ©</p>
-    </footer>
-  </body>
+</body>
+
 </html>
