--- a/home.html
+++ b/home.html
@@ -1,48 +1,79 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projeto - Decola ENEM</title>
-  </head>
-  <body>
-    <header class="cabecalho">
-      <div>
-        <nav classe="login-cadastro">
-          <a class="link-login" href="login.html">Login </a>
-          <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
-        </nav>
-      </div>
-      <a class="cabecalho__menu__link" href="home.html">
-        <img
-          class="logo-apresentacao"
-          src="img/logo_docola_enem.png"
-          href="home.html"
-          height="300px"
-        />
-      </a>
-      <nav cabecalho__menu>
-        <a class="cabecalho__menu__link" href="sobre_nos.html">Sobre Nós </a>
-        <a class="cabecalho__menu__link" href="redacao.html"> Redação </a>
-        <a class="cabecalho__menu__link" href="linguagens.html"> Linguagens </a>
-        <a class="cabecalho__menu__link" href="ciencias_natureza.html">
-          Ciências da Natureza
-        </a>
-        <a class="cabecalho__menu__link" href="ciencias_humanas.html">
-          Ciências Humanas
-        </a>
-        <a class="cabecalho__menu__link" href="matematica.html"> Matemática </a>
-      </nav>
-    </header>
+<html lang="pt-BR">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página Inicial</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background-color: #0c4387;
+            /* Azul escuro */
+            color: white;
+        }
+
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+        }
+
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+        }
+
+        nav ul li {
+            margin-right: 20px;
+        }
+
+        nav ul li:last-child {
+            margin-right: 0;
+        }
+
+        a {
+            color: white;
+            text-decoration: none;
+        }
+
+        .login-signup {
+            display: flex;
+            align-items: center;
+        }
+
+        .login-signup a {
+            margin-right: 10px;
+        }
+    </style>
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Sobre Nós</a></li>
+                <li><a href="#">Redação</a></li>
+                <li><a href="#">Linguagens</a></li>
+                <li><a href="#">Ciências da Natureza</a></li>
+                <li><a href="#">Ciências Humanas</a></li>
+                <li><a href="#">Matemática</a></li>
+                <li><a href="#">Tecnologia</a></li>
+            </ul>
+        </nav>
+        <div class="login-signup">
+            <a href="#">Login</a>
+            <a href="#">Cadastre-se</a>
+        </div>
+    </header>
     <main>
-      <section>
-        <h1 class="apresentacao__conteudo__titulo">Home</h1>
-      </section>
+        <!-- Conteúdo da página -->
     </main>
-    <footer class="rodape__pagina">
-      <p>Desenvolvido pela equipe projeto integrador Proz - 2024 ©</p>
-    </footer>
-  </body>
+</body>
+
 </html>
