--- a/home.html
+++ b/home.html
@@ -54,24 +54,41 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#">Sobre Nós</a></li>
-                <li><a href="#">Redação</a></li>
-                <li><a href="#">Linguagens</a></li>
-                <li><a href="#">Ciências da Natureza</a></li>
-                <li><a href="#">Ciências Humanas</a></li>
-                <li><a href="#">Matemática</a></li>
-                <li><a href="#">Tecnologia</a></li>
-            </ul>
-        </nav>
-        <div class="login-signup">
-            <a href="#">Login</a>
-            <a href="#">Cadastre-se</a>
-        </div>
-    </header>
+  <!DOCTYPE html>
+  <html lang="pt-br">
+  <head>
+      <meta charset="UTF-8">
+      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="teste.js">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Projeto - Decola ENEM</title>
+      <link rel="stylesheet" href="./styles/styles.css">
+      <div>
+          <nav classe="login-cadastro">
+              <a class="link-login" href="login.html">Login </a>
+              <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
+          </nav>
+      </div>
+      <a class="cabecalho__menu__link" href="home.html"> <img class="logo-apresentacao" src="img/logo_docola_enem.png" href="home.html"> </a>
+  </head>
+      <body>
+      </div>
+          <header class="cabecalho"> 
+                  <nav cabecalho__menu>
+                          <a class="cabecalho__menu__link" href="sobre_nos.html">Sobre Nós </a>
+                          <a class="cabecalho__menu__link" href="redacao.html"> Redação </a>
+                          <a class="cabecalho__menu__link" href="linguagens.html"> Linguagens </a>
+                          <a class="cabecalho__menu__link" href="ciencias_natureza.html"> Ciências da Natureza </a>
+                          <a class="cabecalho__menu__link" href="ciencias_humanas.html"> Ciências Humanas </a>
+                          <a class="cabecalho__menu__link" href="matematica.html"> Matemática </a>
+                  </nav> 
+          </header>
     <main>
+      <h1>Estude conosco e seja o protagonista da sua história!      </h1>
+      <p>Na plataforma você encontra videos, resumos, dicas e cronograma de estudos para mandar bem na próxima edição do Exame Nacional do Ensino Médio. Od conteudos estão organizados em Trilhas de Aprendizagem exclusivas para o Ensino Médio.</p> 
+
+        <p>Os alunos, professores e escolas podem adotar a seleção de aulas para suporte aos alunos do 1º, do 2º, e do 3º ano.E, tanto para os preparatórios do Enem quanto para o suporte ao Ensino Médio, disponibilizamos um acervo vídeo para melhor explicação dos conteúdos abordados.</p>
         <!-- Conteúdo da página -->
     </main>
 </body>
