Adicionado arquivo cadastre.html na branch nata_sousa

--- a/Teste_login.html
+++ b/Teste_login.html
@@ -7,22 +7,24 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Login</h1>
+    <main>
+    <h1><img src="/assets/images/logo_docola_enem.png" alt="logo_decola_enem" width="100" height="100"></h1>
     <form action="#" method="get">
         <fieldset>
-            <legend><img src="/assets/images/logo_docola_enem.png" alt="logo_decola_enem" width="100" height="100"></legend>
+        
 
-            <label for="User">Usuário</label>
-            <input type="text" id="User" placeholder="Digite seu usuário">
+        <label for="User">Usuário</label>
+        <input type="text" id="User" placeholder="Digite seu usuário">
 
-            <label for="Pass">Senha</label>
-            <input type="password" id="Pass" placeholder="Digite sua senha" required>
+        <label for="Pass">Senha</label>
+        <input type="password" id="Pass" placeholder="Digite sua senha" >
 
 
 
-            <input type="submit" value="Entrar">
-
+        <input type="submit" value="Entrar">
+        <a href="/cadastre.html"><button>Cadastre-se</button></a>
         </fieldset>
     </form>
+    </main>
 </body>
 </html>
