--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -9,29 +9,53 @@
     <title>Projeto - Decola ENEM</title>
     <link rel="stylesheet" href="./styles/styles.css">
     <div>
-        <nav classe="login-cadastro">
-            <a class="link-login" href="login.html">Login </a>
+        <ul id="button_login_cadastro">
+          <li>
             <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
-        </nav>
-    </div>
-    <a class="cabecalho__menu__link" href="home.html"> <img class="logo-apresentacao" src="img/logo_docola_enem.png" href="home.html"> </a>
-</head>
+          </li>
+          <li>
+            <a class="link-login" href="login.html">Login </a>
+          </li>
+        </ul>
+      </div>
+    </head>
     <body>
-    </div>
-        <header class="cabecalho"> 
-                <nav cabecalho__menu>
-                        <a class="cabecalho__menu__link" href="sobre_nos.html">Sobre Nós </a>
-                        <a class="cabecalho__menu__link" href="redacao.html"> Redação </a>
-                        <a class="cabecalho__menu__link" href="linguagens.html"> Linguagens </a>
-                        <a class="cabecalho__menu__link" href="ciencias_natureza.html"> Ciências da Natureza </a>
-                        <a class="cabecalho__menu__link" href="ciencias_humanas.html"> Ciências Humanas </a>
-                        <a class="cabecalho__menu__link" href="matematica.html"> Matemática </a>
-                </nav> 
-        </header>
-
-        <main> 
-            <h2 class="apresentacao__conteudo__titulo">Sobre Nós</h2>
-                    <section class="apresentacao__conteudo__sobrenos">
+      <header>
+        <ul id="button_menu">
+          <div>
+            <a class="cabecalho__menu__link" href="home.html">
+              <img
+                class="logo-apresentacao"
+                src="img/logo_docola_enem.png"
+                href="home.html"
+              />
+            </a>
+          </div>
+          <li>
+            <a href="sobre_nos.html">Sobre Nós </a>
+          </li>
+          <li>
+            <a href="redacao.html"> Redação </a>
+          </li>
+          <li>
+            <a href="linguagens.html"> Linguagens </a>
+          </li>
+          <li>
+            <a href="ciencias_natureza.html"> Ciências da Natureza </a>
+          </li>
+          <li>
+            <a href="ciencias_humanas.html"> Ciências Humanas </a>
+          </li>
+          <li>
+            <a href="matematica.html"> Matemática </a>
+          </li>
+        </ul>
+      </header>
+  
+      <main>
+        <h2 class="apresentacao__titulo">Sobre Nós</h2>
+        <section class="apresentacao__conteudo__sobrenos">
+                        
                         <p>Bem vindo ao nosso curso Decola ENEM, o projeto foi criado por cinco alunos do curso de Introdução à Programação com foco em Front-End da instuiçao Proz, como tema escolhido pelo grupo foi Educaça de Qualidade.Assim foi desenvolvido um site com foco nos conteúdos da nova matriz curricular do Ensino Médio no Brasil, a BNCC – Base Nacional Curricular Comum, e que se torna a origem dos temas que caem nas provas do Enem.</p>
                         <br>
                         <p>Na plataforma você encontra videos, resumos, dicas e cronograma de estudos para mandar bem na próxima edição do Exame Nacional do Ensino Médio. Od conteudos estão organizados em Trilhas de Aprendizagem exclusivas para o Ensino Médio. Os alunos, professores e escolas podem adotar a seleção de aulas para suporte aos alunos do 1º, do 2º, e do 3º ano.E, tanto para os preparatórios do Enem quanto para o suporte ao Ensino Médio, disponibilizamos um acervo vídeo para melhor explicação dos conteúdos abordados.</p>
@@ -51,7 +75,7 @@
                                     <h3 class="apresentacao__conteudo__titulo">Apresentação da Equipe</h3>
                                     <ul class="apresentacao__equipe">
                                             <li>
-                                                <img class="foto-integrante__equipe" src="img/perfil-02.png" alt="foto-carolina">
+                                                <img class="foto-integrante__equipe" src="img/carolina_lima.png" alt="foto-carolina">
                                                 <h4 class="equipe__lista">Carolina<br>Lima</h4>
                                                 <p>Desenvolvedora<br>Front-end</p>
                                                     <div class="apresentacao__rede-social">
@@ -64,7 +88,7 @@
                                                     </div>
                                             </li> 
                                             <li>
-                                                <img class="foto-integrante__equipe" src="img/perfil-01.png" alt="foto-diego">
+                                                <img class="foto-integrante__equipe" src="img/diego-magno.png" alt="foto-diego">
                                                 <h4 class="equipe__lista">Diego<br>Magno</h4>
                                                 <p>Desenvolvedor<br>Front-end</p>
                                                     <div class="apresentacao__rede-social">
@@ -77,7 +101,7 @@
                                                     </div>
                                             </li> 
                                             <li>
-                                                <img class="foto-integrante__equipe" src="img/perfil-02.png" alt="foto-karen">
+                                                <img class="foto-integrante__equipe" src="img/karen_bastos.png" alt="foto-karen">
                                                 <h4 class="equipe__lista">Karen<br>Bastos</h4>
                                                 <p>Desenvolvedora<br>Front-end</p>
                                                     <div class="apresentacao__rede-social">
@@ -90,7 +114,7 @@
                                                     </div>
                                             </li> 
                                             <li>
-                                                <img class="foto-integrante__equipe" src="img/perfil-01.png" alt="foto-mauri">
+                                                <img class="foto-integrante__equipe" src="img/mauri_junio.png" alt="foto-mauri">
                                                 <h4 class="equipe__lista">Maurício<br>Junio</h4>
                                                 <p>Desenvolvedor<br>Front-end</p>
                                                     <div class="apresentacao__rede-social">
@@ -103,7 +127,7 @@
                                                     </div>
                                             </li> 
                                             <li>
-                                                <img class="foto-integrante__equipe" src="img/perfil-01.png" alt="foto-nata">
+                                                <img class="foto-integrante__equipe" src="img/nata_sousa.png" alt="foto-nata">
                                                 <h4 class="equipe__lista">Natã<br>Sousa</h4>
                                                 <p>Desenvolvedor<br>Front-end</p>
                                                     <div class="apresentacao__rede-social">
