--- a/Teste_login.html
+++ b/Teste_login.html
@@ -9,7 +9,7 @@
 <body>
     <main>
     <h1><img src="/assets/images/logo_docola_enem.png" alt="logo_decola_enem" width="100" height="100"></h1>
-    <form action="#" method="get">
+    <form >
         <fieldset>
         
 
@@ -22,8 +22,9 @@
 
 
         <input type="submit" value="Entrar">
-        <a href="/cadastre.html"><button>Cadastre-se</button></a>
+        <button onclick="window.location.href='cadastre.html'">cadastre</button>
         </fieldset>
+        
     </form>
     </main>
 </body>
