--- a/ciencias_humanas.html
+++ b/ciencias_humanas.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ciências Humanas</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
